[gd_scene load_steps=28 format=3 uid="uid://h2uba1em2toh"]

[ext_resource type="Script" path="res://src/ui/add_node_window/add_node_window.gd" id="1_2vlg5"]
[ext_resource type="Script" path="res://src/ui/add_node_window/node_item.gd" id="2_ymasl"]

[sub_resource type="Resource" id="Resource_f71j8"]
script = ExtResource("2_ymasl")
name = "Time"
children = Array[ExtResource("2_ymasl")]([])

[sub_resource type="Resource" id="Resource_yelw7"]
script = ExtResource("2_ymasl")
name = "Input"
children = Array[ExtResource("2_ymasl")]([SubResource("Resource_f71j8")])

[sub_resource type="Resource" id="Resource_vo10f"]
script = ExtResource("2_ymasl")
name = "Oscillator"
children = Array[ExtResource("2_ymasl")]([])

[sub_resource type="Resource" id="Resource_uujhu"]
script = ExtResource("2_ymasl")
name = "Generator"
children = Array[ExtResource("2_ymasl")]([SubResource("Resource_vo10f")])

[sub_resource type="Resource" id="Resource_vyfyb"]
script = ExtResource("2_ymasl")
name = "Automator"
children = Array[ExtResource("2_ymasl")]([])

[sub_resource type="Resource" id="Resource_6qdbb"]
script = ExtResource("2_ymasl")
name = "Math"
children = Array[ExtResource("2_ymasl")]([])

[sub_resource type="Resource" id="Resource_n2x62"]
script = ExtResource("2_ymasl")
name = "Mix"
children = Array[ExtResource("2_ymasl")]([])

[sub_resource type="Resource" id="Resource_i6ii3"]
script = ExtResource("2_ymasl")
name = "Modifier"
children = Array[ExtResource("2_ymasl")]([SubResource("Resource_vyfyb"), SubResource("Resource_6qdbb"), SubResource("Resource_n2x62")])

[sub_resource type="Resource" id="Resource_5uflc"]
script = ExtResource("2_ymasl")
name = "Exponential low pass"
children = Array[ExtResource("2_ymasl")]([])

[sub_resource type="Resource" id="Resource_aq18e"]
script = ExtResource("2_ymasl")
name = "Convolutional low pass"
children = Array[ExtResource("2_ymasl")]([])

[sub_resource type="Resource" id="Resource_vd7lo"]
script = ExtResource("2_ymasl")
name = "Low-pass"
children = Array[ExtResource("2_ymasl")]([SubResource("Resource_5uflc"), SubResource("Resource_aq18e")])

[sub_resource type="Resource" id="Resource_tee1t"]
script = ExtResource("2_ymasl")
name = "Filter"
children = Array[ExtResource("2_ymasl")]([SubResource("Resource_vd7lo")])

[sub_resource type="Resource" id="Resource_ssmdf"]
script = ExtResource("2_ymasl")
name = "Loop"
children = Array[ExtResource("2_ymasl")]([])

[sub_resource type="Resource" id="Resource_llucf"]
script = ExtResource("2_ymasl")
name = "Loop input"
children = Array[ExtResource("2_ymasl")]([])

[sub_resource type="Resource" id="Resource_eo3wm"]
script = ExtResource("2_ymasl")
name = "Loops"
children = Array[ExtResource("2_ymasl")]([SubResource("Resource_ssmdf"), SubResource("Resource_llucf")])

[sub_resource type="Resource" id="Resource_qrkey"]
script = ExtResource("2_ymasl")
name = "Special"
children = Array[ExtResource("2_ymasl")]([SubResource("Resource_eo3wm")])

[sub_resource type="Resource" id="Resource_tp4do"]
script = ExtResource("2_ymasl")
name = "Oscilloscope"
children = Array[ExtResource("2_ymasl")]([])

[sub_resource type="Resource" id="Resource_m6jx8"]
script = ExtResource("2_ymasl")
name = "Display"
children = Array[ExtResource("2_ymasl")]([])

[sub_resource type="Resource" id="Resource_6ojmt"]
script = ExtResource("2_ymasl")
name = "Visual"
children = Array[ExtResource("2_ymasl")]([SubResource("Resource_tp4do"), SubResource("Resource_m6jx8")])

[sub_resource type="Resource" id="Resource_7yvyo"]
script = ExtResource("2_ymasl")
name = "root"
children = Array[ExtResource("2_ymasl")]([SubResource("Resource_yelw7"), SubResource("Resource_uujhu"), SubResource("Resource_i6ii3"), SubResource("Resource_tee1t"), SubResource("Resource_qrkey"), SubResource("Resource_6ojmt")])

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mr3ur"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7g35e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2r3ls"]

[sub_resource type="InputEventAction" id="InputEventAction_uslob"]
action = &"cancel"

[sub_resource type="Shortcut" id="Shortcut_7n1sx"]
events = [SubResource("InputEventAction_uslob")]

[node name="AddNodeWindow" type="Window"]
title = "Add node..."
initial_position = 5
size = Vector2i(300, 500)
transient = true
exclusive = true
popup_window = true
script = ExtResource("1_2vlg5")
items = SubResource("Resource_7yvyo")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="SearchBox" type="LineEdit" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../Control/ListScrollContainer/ItemsList")
placeholder_text = "Search..."

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TreeScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="ItemsTree" type="Tree" parent="PanelContainer/VBoxContainer/Control/TreeScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/draw_guides = 1
theme_override_constants/v_separation = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_mr3ur")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7g35e")
allow_search = false
hide_root = true
scroll_horizontal_enabled = false
scroll_vertical_enabled = false

[node name="ListScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/Control"]
unique_name_in_owner = true
auto_translate_mode = 1
visible = false
layout_mode = 2
offset_top = 4.0
offset_right = 300.0
offset_bottom = 426.0
size_flags_vertical = 3

[node name="ItemsList" type="ItemList" parent="PanelContainer/VBoxContainer/Control/ListScrollContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 6
theme_override_styles/focus = SubResource("StyleBoxEmpty_2r3ls")
theme_override_styles/panel = SubResource("StyleBoxEmpty_mr3ur")
item_count = 11
item_0/text = "Time"
item_1/text = "Oscillator"
item_2/text = "Automator"
item_3/text = "Math"
item_4/text = "Mix"
item_5/text = "Exponential low pass"
item_6/text = "Convolutional low pass"
item_7/text = "Loop"
item_8/text = "Loop input"
item_9/text = "Oscilloscope"
item_10/text = "Display"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="AddButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Add"

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_7n1sx")
text = "Cancel"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="gui_input" from="PanelContainer/VBoxContainer/SearchBox" to="." method="_on_search_box_gui_input"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/SearchBox" to="." method="_on_search_box_text_changed"]
[connection signal="text_submitted" from="PanelContainer/VBoxContainer/SearchBox" to="." method="_on_search_box_text_submitted"]
[connection signal="item_activated" from="PanelContainer/VBoxContainer/Control/TreeScrollContainer/ItemsTree" to="." method="_on_items_tree_item_activated"]
[connection signal="item_collapsed" from="PanelContainer/VBoxContainer/Control/TreeScrollContainer/ItemsTree" to="." method="_on_items_tree_item_collapsed"]
[connection signal="item_selected" from="PanelContainer/VBoxContainer/Control/TreeScrollContainer/ItemsTree" to="." method="_on_items_tree_item_selected"]
[connection signal="item_activated" from="PanelContainer/VBoxContainer/Control/ListScrollContainer/ItemsList" to="." method="_on_items_list_item_activated"]
[connection signal="item_selected" from="PanelContainer/VBoxContainer/Control/ListScrollContainer/ItemsList" to="." method="_on_items_list_item_selected"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/AddButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/CancelButton" to="." method="_on_close_requested"]
